--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "mongoose": "^5.12.3",
     "body-parser": "^1.19.0",
     "multer": "^1.4.2",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
     "nodemailer": "^6.7.2"
   }
 }
